--- a/code/richard/html/2_blog_page_template/blog_template/style.css
+++ b/code/richard/html/2_blog_page_template/blog_template/style.css
@@ -1,6 +1,8 @@
 html {
     box-sizing: border-box;
 }
+
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
@@ -10,94 +12,70 @@ body {
     background-color: rgb(184, 177, 177);
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: Helvetica, Arial, sans-serif;
-}
-
-header, footer {
-    background-color: rgb(70, 122, 199);
-    min-height: 100px;
-    color: whitesmoke;
-    text-align: center;
-}
-
-main {
-    min-height: 200px;
-    background-color: whitesmoke;
-}
-
 header, main, footer {
     padding: 12px;
 }
+
+header, footer {
+    
+    background-color: rgb(70, 122, 199);
+    color: whitesmoke;
+    text-align: center;
+    align-content: center;
+}
+
+main {
+    display: flex;
+    flex-direction:column-reverse;
+    align-items: center;
+    background-color: whitesmoke;
+}
+
+
+
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center;
+}
+
+
 
 header h1 {
     margin: 0;
 }
 
-header a {
-    color: whitesmoke;
-}
 
 main p {
     text-align: justify;
     
 }
 
-img {
-    display: block;
-    max-width: 100%;
-}
+
 
 footer p {
     margin: 0;
 }
 
+
+
 @media (min-width: 768px) {
 
-    nav {
-        display: flex;
-        justify-content: center;
-    }
-
-    nav p {
-        margin: 6px 12px;
-    }
-
-    .flex-gallery {
-        margin: 0 -6px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .flex-gallery div {
-        width: 50%;
-        padding: 6px;
-    }
 }
+
+
 
 @media (min-width: 1024px) {
 
     header {
         display: flex;
-        justify-content: space-between;
-        text-align: left;
+        justify-content: center;
     }
 
     header h1 {
         margin-bottom: 6px;
         font-size: 3em;
-    }
-
-    header h3 {
-        margin: 0;
-    }
-
-    nav {
-        align-items: flex-end;
-    }
-
-    .flex-gallery div {
-        width: 33.333%
     }
 
 }
