Over Under Achiever

--- a/code/conor/html/lab_2/blog_style.css
+++ b/code/conor/html/lab_2/blog_style.css
@@ -1,10 +1,19 @@
-html {
+body, html {
     box-sizing: border-box;
-    background-color: slategrey;
+    height: 100%;
 }
 
 *:before, *:after {
     box-sizing: inherit;
+}
+
+.bg {
+    background-image: url(https://wallpapercave.com/wp/FDJx1ey.jpg);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 body {
@@ -18,10 +27,10 @@ h1, h2, h3, h4, h5 {
 header, footer {
     color: black;
     text-align: center;
-    background-color: yellow;
+    background-color: white;
 }
 
-header, main, footer {
+header, footer {
     padding: 6px;
     border: solid 3px black;
 }
@@ -35,15 +44,28 @@ header nav a {
     text-align: center;
 }
 
-#sidebar {
+.sidebar {
     border-style: solid;
-    background-color: green;
+    background-color: white;
     text-align: center;
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 85px; /* Stay at the top */
+    padding: 6px;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
 }
 
 main h2 {
     text-align: center;
-    margin: 12px;
+    margin-top: 40px;
+}
+
+.gallery-view{
+    background-color: green;
+    padding: 4px;
 }
 
 main h3 {
@@ -52,6 +74,7 @@ main h3 {
 
 main p {
     text-align: justify;
+    max-width: 100%
 }
 
 img {
@@ -71,10 +94,33 @@ footer p {
     }
 
     .gallery-view div {
-        width: 50%;
+        width: 48%;
         padding: 6px;
+        margin-right: 1px;
     }
-}
+
+    .sidebar {
+        height: auto;
+        width: 140px; /* Set the width of the sidebar */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        align-content: left;
+    }
+      
+      /* The navigation menu links */
+    .sidebar a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 20px;
+        color: black;
+        display: block;
+    }
+
+    main {
+        margin-left: 175px;
+        margin-right: 50px;
+        padding-right: 6px;
+      }
+
 
 @media (min-width: 1024px) {
     header {
@@ -83,7 +129,12 @@ footer p {
         text-align: left;
     }
 
+    header h1 {
+        margin-top: 6px;
+    }
+
     nav {
         align-items: flex-end;
     }
+    
 }
