css - more sample files

--- a/code/richard/html_css/2_blog_page_template/blog_template/style.css
+++ b/code/richard/html_css/2_blog_page_template/blog_template/style.css
@@ -31,6 +31,12 @@ main {
     background-color: whitesmoke;
 }
 
+.left {
+    display: flex;
+    flex-direction: column;
+    
+}
+
 
 
 
@@ -76,6 +82,10 @@ footer p {
     header h1 {
         margin-bottom: 6px;
         font-size: 3em;
+    }
+
+    .left {
+        background-color: red;
     }
 
 }
