--- a/code/charlie/HTML/Lab2/Lab2.css
+++ b/code/charlie/HTML/Lab2/Lab2.css
@@ -28,7 +28,6 @@ header a{
 img{
     max-width: 100%;
     display: block;
-
 }
 
 /*For bigger screens (Tablet)*/
@@ -40,25 +39,36 @@ img{
     }
 
     nav p{
-        color:chartreuse;
+        color:blanchedalmond;
         margin: 6px 12px;
     }
 
     .flex-gallery{
-        width:auto;
+        margin:0 -6px;
         display: flex;
         flex-wrap: wrap;
     }
 
     .flex-gallery div{
-        margin: 50%;
+        width: 50%;
         padding:6px;
+        border: 1px salmon;
+        box-shadow: 8px 8px 8px #696969;
     }
 }
 
 /*For bigger screens (Desktop)*/
 @media (min-width:1024px){
+    
+    
+    header, main, footer{
+        padding: 16px 128px;
+        flex-wrap:wrap;
+    } 
+    
     .flex-gallery div{
-        width:33.3333%;
-    }
+        width:calc(33.3333%-34px);
+        padding:6px;
+        border: 1px salmon;
+        box-shadow: 8px 8px 8px #696969;}
 }
