--- a/code/conor/html/lab_3/company_style.css
+++ b/code/conor/html/lab_3/company_style.css
@@ -1,26 +1,23 @@
 html {
     box-sizing: border-box;
+    background-color: whitesmoke;
 }
 
 *:before, *:after {
     box-sizing: inherit;
 }
 
-.bg {
+/* .bg {
     background-image: url(https://wallpapercave.com/wp/FDJx1ey.jpg);
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-}
+} */
 
-body {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-h1, h2, h3, h4, h5 {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+header, footer {
+    font-family: "Garamond", serif;
 }
 
 header {
@@ -29,8 +26,8 @@ header {
     text-align: center;
 }
 
-header h2 {
-    margin: 0;
+body h1, h2, h3, h4, h5 {
+    font-family: 'Candara', sans-serif;
 }
 
 .left, .right {
@@ -41,14 +38,22 @@ header h2 {
 .card {
     /* background-color: white; */
     background-image: url("https://th.bing.com/th/id/Rd7fa4dcac85665c50b4a1a10f87c491b?rik=ttXWP9m5sWh0gw&riu=http%3a%2f%2fwallpaperstock.net%2fhibiscus-pattern-wallpapers_51566_1920x1200.jpg&ehk=MXkteyEyokvqpAj%2bgCPqYLpOSjvI7KPquR6BAhh1hz8%3d&risl=&pid=ImgRaw");
-    padding: 20px;
+    padding: 10px;
     margin-top: 20px;
-    color: white;
+    color:lightsteelblue;
 }
 
 .transbox{
+    margin: 5px;
+    background-color: #F29D35;
+    border: 1px solid black;
+    opacity: 1;
+}
+
+div .transbox{
     margin: 3px;
-    background-color: white;
+    padding-bottom: 20px;
+    background-color: #F29D35;
     border: 1px solid black;
     opacity: 1;
 }
