--- a/code/mike/HTML/lab2/desktop.css
+++ b/code/mike/HTML/lab2/desktop.css
@@ -5,28 +5,29 @@
         position: fixed;
         top: 0;
         left: 0;
-        overflow-y:auto
+        overflow-y:auto;
     }
 
     aside div {
-        padding:36px 18px
+        padding:36px 18px;
     }
 
     aside div nav ul li {
         padding: 0 !important;
-        display:block
+        display:block;
     }
 
     aside div ul.social {
-        padding-top:32px
+        padding-top:32px;
     }
 
     main {
         width: 75vw;
         height: 100vh;
         position: absolute;
+        margin-top: 0;
         top: 0;
         left: 25vw;
-        overflow-x:hidden
+        overflow-x:hidden;
     }
 }
