--- a/code/conor/html/lab_3/company_style.css
+++ b/code/conor/html/lab_3/company_style.css
@@ -1,6 +1,6 @@
 html {
     box-sizing: border-box;
-    background-color: whitesmoke;
+    background-color: #F2D8CE;
 }
 
 *:before, *:after {
@@ -17,14 +17,22 @@ html {
 } */
 
 header, footer {
-    font-family: "Garamond", serif;
     background-image: url("https://th.bing.com/th/id/Rd7fa4dcac85665c50b4a1a10f87c491b?rik=ttXWP9m5sWh0gw&riu=http%3a%2f%2fwallpaperstock.net%2fhibiscus-pattern-wallpapers_51566_1920x1200.jpg&ehk=MXkteyEyokvqpAj%2bgCPqYLpOSjvI7KPquR6BAhh1hz8%3d&risl=&pid=ImgRaw");
     padding: 10px;
     text-align: center;
 }
 
-body h1, h2, h3, h4, h5 {
-    font-family: 'Candara', sans-serif;
+a:hover {
+    opacity: 0.8;
+}
+
+body, nav h1, h2, h3, h4, h5 {
+    font-family: "Copperplate", "Papyrus", fantasy
+}
+
+p {
+    font-family: "garamond";
+    font-size: 20px;
 }
 
 .left, .right {
@@ -36,21 +44,20 @@ body h1, h2, h3, h4, h5 {
     background-image: url("https://th.bing.com/th/id/Rd7fa4dcac85665c50b4a1a10f87c491b?rik=ttXWP9m5sWh0gw&riu=http%3a%2f%2fwallpaperstock.net%2fhibiscus-pattern-wallpapers_51566_1920x1200.jpg&ehk=MXkteyEyokvqpAj%2bgCPqYLpOSjvI7KPquR6BAhh1hz8%3d&risl=&pid=ImgRaw");
     padding: 10px;
     margin-top: 20px;
-    color:lightsteelblue;
 }
 
 .transbox{
     margin: 5px;
-    background-color: #F29D35;
-    border: 1px solid black;
+    background-color: whitesmoke;
+    border: 1px solid #6CD9C5;
     opacity: 1;
 }
 
 div .transbox{
     margin: 3px;
     padding-bottom: 20px;
-    background-color: #F29D35;
-    border: 1px solid black;
+    background-color: whitesmoke;
+    border: 1px solid #6CD9C5;
     opacity: 1;
 }
 
@@ -63,7 +70,7 @@ header .transbox h2, footer .transbox h3 {
 .transbox h2, h3, h4, h5, h6, img, p, ul, a {
     margin: 5%;
     font-weight: bold;
-    color: #000000;
+    color: black;
 }
 
 .social-media img {
@@ -72,9 +79,63 @@ header .transbox h2, footer .transbox h3 {
     font-size: 1.50em;
 }
 
+ul :hover {
+    opacity: .8;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-pinterest {
+    background: #cb2027;
+    color: white;
+}
+
+.newsletter {
+    padding: 20px;
+    margin: 8px;
+    display: center;
+}
+
+.newsletter input {
+    max-width: 90%
+}
+
 img {
     display: block;
     width: 90%;
+    border: #8C0327;
 }
 
 footer {
