--- a/code/brndn/HTML_CSS_Labs/Lab3_Company_Home/home.css
+++ b/code/brndn/HTML_CSS_Labs/Lab3_Company_Home/home.css
@@ -80,6 +80,10 @@ nav a:hover {
     scroll-snap-align: start;
 }
 
+footer {
+    display: none;
+}
+
 @media (min-width: 768px) {
 
     nav, #name {
