--- a/code/charlie/HTML/Lab1/Lab1.css
+++ b/code/charlie/HTML/Lab1/Lab1.css
@@ -6,8 +6,9 @@ html {
 }
 
 body{
+    
     font-family: Georgia, 'Times New Roman', Times, serif;
-    ;
+    justify-content: center;
 }
 
 h1, h2, h3, h4, h5, h6{
