--- a/code/joshua/html/lab04/main.css
+++ b/code/joshua/html/lab04/main.css
@@ -112,8 +112,9 @@ input {
 
 input[type="submit"] {
     font-size: 25px;
-    margin-top: 20px;
+    margin-top: 35px;
     text-shadow: 1px 1px ghostwhite;
+    border-radius: 25px;
 }
 
 input[type="submit"]:hover {
@@ -122,6 +123,7 @@ input[type="submit"]:hover {
 
 select {
     margin-bottom: 25px;
+    margin-left: 15px;
 }
 
 footer {
@@ -137,4 +139,153 @@ footer {
 footer p {
     font-size: 20px;
     text-shadow: 1px 1px ghostwhite;
+}
+
+@media (min-width: 768px) {
+
+    header h1 {
+        font-size: 60px;
+        text-shadow: 3px 4px black;
+        letter-spacing: 1px;
+    }
+
+    header nav a {
+        font-size: 35px;
+        margin: 10px;
+        padding: 20px;
+    }
+
+    main h2 {
+        font-size: 55px;
+        letter-spacing: 8px;
+    }
+
+    form p {
+        font-size: 30px;
+    }
+
+    legend {
+        font-size: 35px;
+    }
+
+    form fieldset {
+        font-size: 30px;
+    }
+
+    input[type="radio"] {
+        transform: scale(1.3);
+    }
+
+    input[type="checkbox"] {
+        transform: scale(1.3);
+    }
+
+    input[type="text"] {
+        transform: scale(1);
+    }
+
+    input[type="submit"] {
+        font-size: 40px;
+        margin-top: 25px;
+        margin-bottom: 8px;
+        text-shadow: 1px 1px ghostwhite;
+    }
+
+    select {
+        margin-left: 15px;
+    }
+
+    footer p {
+        font-size: 25px;
+    }
+}
+
+@media (min-width: 1024px) {
+
+    header h1 {
+        font-size: 65px;
+        text-shadow: 3px 4px black;
+        letter-spacing: 3px;
+    }
+
+    header nav a {
+        font-size: 35px;
+        margin: 30px;
+        padding: 32px;
+        letter-spacing: .3px;
+    }
+
+    main h2 {
+        font-size: 60px;
+        letter-spacing: 10px;
+    }
+}
+
+@media (min-width: 1920px)  {
+
+    header h1 {
+        font-size: 70px;
+        text-shadow: 3px 4px black;
+        letter-spacing: 4px;
+    }
+
+    header nav a {
+        font-size: 35px;
+        margin: 73px;
+        padding: 98px;
+        letter-spacing: 1px;
+    }
+
+    input[type="radio"] {
+        transform: scale(1.5);
+    }
+
+    input[type="checkbox"] {
+        transform: scale(1.5);
+    }
+
+    input[type="text"] {
+        transform: scale(.9);
+    }
+
+    input[type="date"] {
+        transform: scale(1);
+        margin-left: 32px;
+    }
+
+    input[type="tel"] {
+        transform: scale(.9);
+    }
+
+    input[type="email"] {
+        transform: scale(.9);
+    }
+
+    main h2 {
+        font-size: 70px;
+        letter-spacing: 15px;
+    }
+
+    form p {
+        font-size: 40px;
+    }
+
+    legend {
+        font-size: 45px;
+    }
+
+    form fieldset {
+        font-size: 35px;
+    }
+
+    select {
+        margin-left: 15px;
+        margin-left: 32px;
+    }
+
+    input[type="submit"] {
+        font-size: 40px;
+        margin-top: 25px;
+        text-shadow: 1px 1px ghostwhite;
+    }
 }
