--- a/code/conor/html/lab_3/company_style.css
+++ b/code/conor/html/lab_3/company_style.css
@@ -74,7 +74,7 @@ header .transbox h2, footer .transbox h3 {
 }
 
 .social-media img {
-    display: inline-flex;
+    text-align: center;
     line-height: 1.5em;
     font-size: 1.50em;
 }
