--- a/code/richard/django/grocery_list/grocery_list/templates/grocery_list/item_detail.html
+++ b/code/richard/django/grocery_list/grocery_list/templates/grocery_list/item_detail.html
@@ -10,4 +10,8 @@
     <p>Date Created:  {{grocery_item.date_created}}</p>
     <p>Date Completed: {{grocery_item.date_completed}}</p>
     <p>Completed: {{grocery_item.completed}}</p>
+    <p></p>
+    <a href="/{{ grocery_item.id }}/update">Update this item</a>
+    <p></p>
+    <a href="/{{ grocery_item.id }}/delete">Delete this item</a>
 </body>
