--- a/code/mike/django/url_shortener/url_shortener/templates/url_shortener/index.html
+++ b/code/mike/django/url_shortener/url_shortener/templates/url_shortener/index.html
@@ -1,17 +1,17 @@
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'grocery_list/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'url_shortener/style.css' %}">
 
 
-<h1>Grocery List<h1>
+<h1>URL Shortener<h1>
 
-{% if list_of_items %}
+{% if list_of_urls %}
 <ul>
-    {% for item in list_of_items %}
-        <li><a href="{% url 'grocery_list:index' %}">{{ item.text_description }}</a></li>
+    {% for item in list_of_urls %}
+        <li><a href="{% url 'grocery_list:index' item.id %}">{{ item.text_description }}</a></li>
             <form action="{% url 'grocery_list:completed' item.id %}" method='post'>
                 {% csrf_token %}
-                <input type='submit' value='Completed'>
+                <input type='checkbox' value='Shorten URL'>
             </form>
     {% endfor %}
 </ul>    
@@ -30,9 +30,5 @@
 <ul>
     {% for item in completed_items %}
     <li> {{item.text_description}}
-        <form action="{% url 'grocery_list:deleted' item.id %}" method='post'>
-            {% csrf_token %}
-            <input type='submit' value='Delete'>
-        </form>
     {% endfor %}
-</ul>
+</ul>    
